feat: add saturate default

--- a/test/interface/__snapshots__/config.test.ts.yml
+++ b/test/interface/__snapshots__/config.test.ts.yml
@@ -664,6 +664,15 @@ Tools / should load all plugins correctly / css / 0: |-
   }
   @media (min-width: 976px) {
     .lg\:backdrop-filter {
+      --tw-backdrop-blur: var(--tw-empty,/*!*/ /*!*/);
+      --tw-backdrop-brightness: var(--tw-empty,/*!*/ /*!*/);
+      --tw-backdrop-contrast: var(--tw-empty,/*!*/ /*!*/);
+      --tw-backdrop-grayscale: var(--tw-empty,/*!*/ /*!*/);
+      --tw-backdrop-hue-rotate: var(--tw-empty,/*!*/ /*!*/);
+      --tw-backdrop-invert: var(--tw-empty,/*!*/ /*!*/);
+      --tw-backdrop-opacity: var(--tw-empty,/*!*/ /*!*/);
+      --tw-backdrop-saturate: var(--tw-empty,/*!*/ /*!*/);
+      --tw-backdrop-sepia: var(--tw-empty,/*!*/ /*!*/);
       -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
       backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
     }
