feat: add new utility hyphens

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -96,6 +96,7 @@ Tools / get corePlugins / list / 0: |-
     "visibility",
     "whitespace",
     "wordBreak",
+    "hyphens",
     "width",
     "zIndex",
     "isolation",
@@ -247,6 +248,7 @@ Tools / get corePlugins / list3 / 2: |-
     "visibility",
     "whitespace",
     "wordBreak",
+    "hyphens",
     "width",
     "zIndex",
     "isolation",
