feat: add caret-color and caret-opacity utility

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -66,6 +66,8 @@ Tools / get corePlugins / list / 0: |-
     "padding",
     "placeholderColor",
     "placeholderOpacity",
+    "caretColor",
+    "caretOpacity",
     "pointerEvents",
     "position",
     "inset",
@@ -218,6 +220,8 @@ Tools / get corePlugins / list3 / 2: |-
     "padding",
     "placeholderColor",
     "placeholderOpacity",
+    "caretColor",
+    "caretOpacity",
     "pointerEvents",
     "position",
     "inset",
@@ -337,6 +341,7 @@ Tools / resolve dynamic utilities / with-plugins / 1: |-
     "pb",
     "pl",
     "placeholder",
+    "caret",
     "inset",
     "top",
     "right",
@@ -419,6 +424,7 @@ Tools / resolve dynamic utilities / without-plugins / 0: |-
     "pb",
     "pl",
     "placeholder",
+    "caret",
     "inset",
     "top",
     "right",
