--- a/test/processor/__snapshots__/utilities.test.ts.yml
+++ b/test/processor/__snapshots__/utilities.test.ts.yml
@@ -108,6 +108,20 @@ Tools / border width shouldn't infer / css / 0: |-
   .border-t-4 {
     border-top-width: 4px;
   }
+Tools / caret color / css / 0: |-
+  .caret-auto {
+    caret-color: auto;
+  }
+  .caret-transparent {
+    caret-color: transparent;
+  }
+  .caret-gray-800 {
+    --tw-caret-opacity: 1;
+    caret-color: rgba(31, 41, 55, var(--tw-caret-opacity));
+  }
+  .caret-opacity-80 {
+    --tw-caret-opacity: 0.8;
+  }
 Tools / container max-width test / container / 0: |-
   .container {
     width: 100%;
