--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -89,6 +89,10 @@ Tools / get corePlugins / list / 0: |-
     "textOverflow",
     "fontStyle",
     "textTransform",
+    "textDecorationStyle",
+    "textDecorationLength",
+    "textDecorationColor",
+    "textDecorationOpacity",
     "textDecoration",
     "fontSmoothing",
     "fontVariantNumeric",
@@ -243,6 +247,10 @@ Tools / get corePlugins / list3 / 2: |-
     "textOverflow",
     "fontStyle",
     "textTransform",
+    "textDecorationStyle",
+    "textDecorationLength",
+    "textDecorationColor",
+    "textDecorationOpacity",
     "textDecoration",
     "fontSmoothing",
     "fontVariantNumeric",
@@ -363,6 +371,7 @@ Tools / resolve dynamic utilities / with-plugins / 1: |-
     "stroke",
     "text",
     "tracking",
+    "line",
     "w",
     "z",
     "gap",
@@ -446,6 +455,7 @@ Tools / resolve dynamic utilities / without-plugins / 0: |-
     "stroke",
     "text",
     "tracking",
+    "line",
     "w",
     "z",
     "gap",
