--- a/test/processor/__snapshots__/utilities.test.ts.yml
+++ b/test/processor/__snapshots__/utilities.test.ts.yml
@@ -298,6 +298,55 @@ Tools / shadow color / css / 0: |-
   .shadow-red-800 {
     --tw-shadow-color: 153, 27, 27;
   }
+Tools / text decoration color & opacity & length / css / 0: |-
+  .line-solid {
+    -webkit-text-decoration-style: solid;
+    text-decoration-style: solid;
+  }
+  .line-double {
+    -webkit-text-decoration-style: double;
+    text-decoration-style: double;
+  }
+  .line-dotted {
+    -webkit-text-decoration-style: dotted;
+    text-decoration-style: dotted;
+  }
+  .line-dashed {
+    -webkit-text-decoration-style: dashed;
+    text-decoration-style: dashed;
+  }
+  .line-2 {
+    text-decoration-thickness: 2px;
+  }
+  .line-3px {
+    text-decoration-thickness: 3px;
+  }
+  .line-1rem {
+    text-decoration-thickness: 1rem;
+  }
+  .line-transparent {
+    -webkit-text-decoration-color: transparent;
+    text-decoration-color: transparent;
+  }
+  .line-gray-200 {
+    --tw-line-opacity: 1;
+    -webkit-text-decoration-color: rgba(229, 231, 235, var(--tw-line-opacity));
+    text-decoration-color: rgba(229, 231, 235, var(--tw-line-opacity));
+  }
+  .line-opacity-90 {
+    --tw-line-opacity: 0.9;
+  }
+  .underline {
+    -webkit-text-decoration-line: underline;
+    text-decoration-line: underline;
+  }
+  .line-through {
+    -webkit-text-decoration-line: line-through;
+    text-decoration-line: line-through;
+  }
+  .no-underline {
+    text-decoration: none;
+  }
 Tools / wrap container / small container / 0: |-
   @media (min-width: 640px) {
     .sm\:container {
