feat: add more list style types

--- a/test/utils/__snapshots__/completions.test.ts.yml
+++ b/test/utils/__snapshots__/completions.test.ts.yml
@@ -6025,10 +6025,20 @@ Tools / completions / static / 0: |-
     "leading-relaxed",
     "leading-loose",
     "list-none",
+    "list-circle",
+    "list-square",
     "list-disc",
     "list-decimal",
-    "list-square",
+    "list-zero-decimal",
     "list-roman",
+    "list-lower-roman",
+    "list-upper-roman",
+    "list-greek",
+    "list-lower-greek",
+    "list-upper-greek",
+    "list-alpha",
+    "list-lower-alpha",
+    "list-upper-alpha",
     "placeholder-opacity-0",
     "placeholder-opacity-5",
     "placeholder-opacity-10",
