--- a/test/processor/__snapshots__/utilities.test.ts.yml
+++ b/test/processor/__snapshots__/utilities.test.ts.yml
@@ -280,6 +280,19 @@ Tools / grid template test / grid template / 0: |-
   .grid-rows-4 {
     grid-template-rows: repeat(4, minmax(0, 1fr));
   }
+Tools / list style type / css / 0: |-
+  .list-disc {
+    list-style-type: disc;
+  }
+  .list-square {
+    list-style-type: square;
+  }
+  .list-lower-greek {
+    list-style-type: lower-greek;
+  }
+  .list-zero-decimal {
+    list-style-type: decimal-leading-zero;
+  }
 Tools / ring opacity / css / 0: |-
   .ring-transparent {
     --tw-ring-color: transparent;
