feat: add tab size utility

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -68,6 +68,7 @@ Tools / get corePlugins / list / 0: |-
     "placeholderOpacity",
     "caretColor",
     "caretOpacity",
+    "tabSize",
     "pointerEvents",
     "position",
     "inset",
@@ -226,6 +227,7 @@ Tools / get corePlugins / list3 / 2: |-
     "placeholderOpacity",
     "caretColor",
     "caretOpacity",
+    "tabSize",
     "pointerEvents",
     "position",
     "inset",
@@ -350,6 +352,7 @@ Tools / resolve dynamic utilities / with-plugins / 1: |-
     "pl",
     "placeholder",
     "caret",
+    "tab",
     "inset",
     "top",
     "right",
@@ -434,6 +437,7 @@ Tools / resolve dynamic utilities / without-plugins / 0: |-
     "pl",
     "placeholder",
     "caret",
+    "tab",
     "inset",
     "top",
     "right",
