feat: add image rendering utility

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -132,6 +132,7 @@ Tools / get corePlugins / list / 0: |-
     "transitionDelay",
     "keyframes",
     "animation",
+    "imageRendering",
     "mixBlendMode",
     "backgroundBlendMode",
     "filter",
@@ -292,6 +293,7 @@ Tools / get corePlugins / list3 / 2: |-
     "transitionDelay",
     "keyframes",
     "animation",
+    "imageRendering",
     "mixBlendMode",
     "backgroundBlendMode",
     "filter",
