feat: add caption side utilities

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -27,6 +27,7 @@ Tools / get corePlugins / list / 0: |-
     "boxDecorationBreak",
     "boxSizing",
     "cursor",
+    "captionSide",
     "display",
     "flexDirection",
     "flexWrap",
@@ -188,6 +189,7 @@ Tools / get corePlugins / list3 / 2: |-
     "borderWidth",
     "boxDecorationBreak",
     "boxSizing",
+    "captionSide",
     "display",
     "flexDirection",
     "flexWrap",
